# SeeVi-backend

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
graphql-query-maker/: Cargo.toml
graphql-query-maker/src/: lib.rs  main.rs  request.rs  variable.rs
graphql-query-maker/tests/: basic.rs
src/: error.rs  filters.rs  lib.rs  main.rs  mock_data_generation.rs  object_id.rs
src/common/: datetime.rs
src/data_source/: cv_data_source.rs  cv_data_source_error.rs  cv_details_data_source.rs  cv_details_data_source_error.rs  error.rs  inmemory_db.rs  mod.rs  mongo.rs  test_mongo_cv_data_source.rs  test_mongo_user_data_source.rs  tests.rs  user_data_source.rs  user_data_source_error.rs
src/data_source/comment/: bookmark.rs  bookmark_data_error.rs  bookmark_error.rs  comment_data_error.rs  error.rs  like.rs  like_data_source_error.rs  mod.rs
src/data_source/cv/: bookmark.rs  error.rs  like.rs  mod.rs  share.rs
src/data_source/cv_details/: mod.rs
src/data_source/friends_list/: mod.rs
src/data_source/friends_list_datasource/: error.rs  mod.rs
src/data_source/mongo/: cv_bookmark_datasource.rs  cv_like_datasource.rs  cv_share_datasource.rs  mod.rs  mongo.rs  mongo_for_testing.rs
src/data_source/tests/: mod.rs  test_mongo_cv_data_source.rs  test_mongo_user_data_source.rs
src/data_source/traits/: cv.rs  friends_list.rs  mod.rs  user.rs
src/data_source/user/: error.rs  mod.rs
src/graphql/: cv.rs  mod.rs  mutation.rs  query.rs  user.rs  user_graphql.rs
src/mock_data/: comments.rs  cvs.rs  educations.rs  experiences.rs  mock_data_generation.rs  mod.rs  users.rs
src/models/: comment.rs  cv.rs  education.rs  experience.rs  friend_request.rs  mod.rs  range_values.rs  sex.rs  users.rs
src/models/comment/: bookmark.rs  comment.rs  create_comment_input.rs  like.rs  mod.rs  update_comment_input.rs
src/models/cv/: create_cv_input.rs  cv.rs  interactions.rs  mod.rs  tests.rs  update_cv_input.rs
src/models/cv_details/: cv_details.rs  (+1 more)
src/services/: cv_service.rs  mod.rs  temp.rs  tests.rs  user_service.rs
tests/: cv_test.rs  integration_test.rs
tests/common/: mod.rs  value_getter.rs
(+44 files in other folders)
