[package]
name = "seevi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.8", features = ["bson"] }
async-graphql-tide = "5.0.9"
async-trait = "0.1.68"
derive_builder = "0.12.0"
# firebase = "0.9.1" # firebase seems to generate error relating libcurl
mongodb = { version = "2.5.0", default-features = false, features = [
  "tokio-runtime",
] }
serde = "1.0.163"
serial_test = "2.0.0"
tide = "0.16.0"
tokio = { version = "1.28.1", features = ["full"] }
