[package]
name = "seevi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.8", features = ["bson"] }
async-graphql-tide = "5.0.9"
async-trait = "0.1.68"
derive_builder = "0.12.0"
google-cloud-auth = "0.10.0"
google-cloud-default = {version = "0.3.0", features = ["storage"]}
google-cloud-storage = "0.11.1"
mongodb = { version = "2.5.0", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.163"
serial_test = "2.0.0"
jsonwebtoken = "8"
bcrypt = "0.14"
struct_iterable = "0.1.1"
lazy_static = "1.4.0"
tokio = { version = "1.28.2" }
warp = { version = "0.3.5", default-features = false }
async-graphql-warp = "5.0.10"
pretty_env_logger = "0.5.0"
log = "0.4.19"
